친구 관련 기능 수정